2025-07-08T01:51:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16131998103 # 1085
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-08
* notice: last 14d: unq all: 55 116
* notice: prev accum: outdated-unq outdated-all / unq all: 4356 9120 / 4437 9233
* notice: next accum: outdated-unq outdated-all / unq all: 4356 9120 / 4438 9237
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -1 -1 / +17 +34 -0 -0 / 17 34
* notice: removed / changed dates: [] / [2025-06-24 2025-07-07]

2025-07-07T12:46:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16117327974 # 1084
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-07
* notice: last 14d: unq all: 55 113
* notice: prev accum: outdated-unq outdated-all / unq all: 4354 9118 / 4421 9203
* notice: next accum: outdated-unq outdated-all / unq all: 4356 9120 / 4437 9233
* notice: prev exec diff / last date diff / accum: unq all: +16 +30 -0 -0 / +16 +30 -0 -0 / 16 30
* notice: removed / changed dates: [2025-06-23] / [2025-07-07]

2025-07-07T01:56:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16105802286 # 1083
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-07
* notice: last 14d: unq all: 42 84
* notice: prev accum: outdated-unq outdated-all / unq all: 4351 9114 / 4416 9197
* notice: next accum: outdated-unq outdated-all / unq all: 4354 9118 / 4421 9203
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -1 -1 / +7 +8 -0 -0 / 7 8
* notice: removed / changed dates: [2025-06-22] / [2025-06-23 2025-07-06]

2025-07-06T12:41:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16099126401 # 1082