@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-08T01:51:44Z",
-  "count" : 5,
+  "timestamp" : "2025-07-08T12:46:39Z",
+  "count" : 4,
   "count_minmax" : [ 1, 6 ],
-  "count_decinc" : [ -1, +6 ],
-  "uniques" : 4,
+  "count_decinc" : [ -2, +6 ],
+  "uniques" : 3,
   "uniques_minmax" : [ 1, 5 ],
-  "uniques_decinc" : [ -1, +5 ]
+  "uniques_decinc" : [ -2, +5 ]
 }
