@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-07-08T01:51:44Z",
+  "timestamp" : "2025-07-08T12:46:39Z",
   "count_outdated" : 9120,
   "uniques_outdated" : 4356,
-  "count" : 9237,
-  "uniques" : 4438,
+  "count" : 9238,
+  "uniques" : 4439,
   "clones" : [
     {
       "timestamp": "2025-06-24T00:00:00Z",
-      "count": 5,
+      "count": 4,
       "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 1, 6 ],
-      "uniques": 4,
+      "count_decinc": [ 2, 6 ],
+      "uniques": 3,
       "uniques_minmax": [ 1, 5 ],
-      "uniques_decinc": [ 1, 5 ]
+      "uniques_decinc": [ 2, 5 ]
     },
     {
       "timestamp": "2025-06-25T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 17,
       "uniques_minmax": [ 16, 17 ],
       "uniques_decinc": [ 0, 17 ]
+    },
+    {
+      "timestamp": "2025-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
