@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-06-24T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 4,
+      "uniques": 3
     },
     {
       "timestamp": "2025-06-25T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-07-07T00:00:00Z",
       "count": 34,
       "uniques": 17
+    },
+    {
+      "timestamp": "2025-07-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
